[project]
name = "sis"
version = "0.1.0"
description = "Riskified Sales Intelligence System — 10-agent AI pipeline for deal health analysis"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.42.0",
    "sqlalchemy>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "tiktoken>=0.8",
    "nest-asyncio>=1.5",
    "python-jose[cryptography]>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]
alerts = [
    "slack-sdk>=3.33",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
